<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Restore Camera default settings?</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">DONE</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="switch_camera_id">Switch Camera</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">10</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_720p" translatable="false">Fine</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD</string>
    <string name="pref_video_quality_entry_low">Low</string>
	<string name="pref_video_quality_entry_medium">Medium</string>
    <string name="pref_video_quality_entry_high">High</string>
    <string name="pref_video_quality_entry_fine">Fine</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1000" translatable="false">1s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1500" translatable="false">1.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2000" translatable="false">2s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2500" translatable="false">2.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_3000" translatable="false">3s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_5000" translatable="false">5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10000" translatable="false">10s</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M pixels</string>
    <string name="pref_camera_picturesize_entry_2592x1936">5M pixels</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M pixels</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M pixels</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1024x768">1M pixels</string>
    <string name="pref_camera_picturesize_entry_640x480">VGA</string>
    <string name="pref_camera_picturesize_entry_320x240">QVGA</string>
    <string name="pref_camera_focusmode_default" translatable="false">continuous-picture</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_entry_twilight">Twilight</string>
    <string name="pref_camera_whitebalance_entry_shade">Shade</string>
    <string name="pref_camera_whitebalance_entry_warm_fluorescent">Warm fluorescent</string>
    <string name="pref_camera_whitebalance_entry_tungsten">Tungsten</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="not_selectable_in_scene_mode">Not selectable in scene mode.</string>
    <string name="pref_restore_title">Camera settings</string>
    <string name="pref_restore_detail">Restore defaults</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default" translatable="false">0</string>
    <string name="dialog_ok">OK</string>
    <string name="spaceIsLow_content" product="default">Your SD card is running out of space. Change the quality setting or delete some images or other files.</string>
    <string name="image_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="video_file_name_format" translatable="false">"'VID'_yyyyMMdd_HHmmss"</string>
    <string name="pano_file_name_format" translatable="false">"'PANO'_yyyyMMdd_HHmmssSSS"</string>
    <string name="video_reach_size_limit">Size limit reached.</string>
    <string name="switch_to_camera_label">Switch to camera</string>
    <string name="switch_to_video_label">Switch to video</string>
    <string name="switch_to_panorama_label">Switch to panorama</string>
    <string name="setting_increment" translatable="false">&gt;</string>
    <string name="setting_decrement" translatable="false">&lt;</string>
    <string name="share_picture_via">Share picture via</string>
    <string name="share_video_via">Share video via</string>
    <string name="no_picture_to_share">No picture to share.</string>
    <string name="no_video_to_share">No video to share.</string>
    <string name="pano_too_fast_prompt">Too fast</string>
    <string name="pano_dialog_prepare_preview">Preparing panorama</string>
    <string name="pano_dialog_panorama_failed">Couldn\'t save panorama.</string>
    <string name="pano_dialog_title">Panorama</string>
    <string name="pano_capture_indication">Capturing panorama</string>
    <string name="pano_review_saving_indication_str">Saving\u2026</string>
    <string name="tap_to_focus">Touch to focus.</string>
    <string name="pref_video_effect_default" translatable="false">none</string>
    <string name="pref_video_effect_title">Effects</string>
    <string name="effect_none">None</string>
    <string name="effect_goofy_face_squeeze">Squeeze</string>
    <string name="effect_goofy_face_big_eyes">Big eyes</string>
    <string name="effect_goofy_face_big_mouth">Big mouth</string>
    <string name="pref_camera_normal_capture_default" translatable="false">"Normal"</string>
    <string name="pref_camera_normal_capture_title">"Capture mode"</string>
    <string name="pref_camera_hdr_title">HDR</string>
    <string name="pref_camera_hdr_default" translatable="false">off</string>
    <string name="pref_camera_iso_default" translatable="false">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_exposuremeter_default" translatable="false">center</string>
    <string name="pref_camera_exposuremeter_title">AE meter</string>
    <string name="pref_camera_focusmeter_default" translatable="false">spot</string>
    <string name="pref_camera_focusmeter_title">Focus meter</string>
    <string name="pref_camera_edge_default" translatable="false">middle</string>
    <string name="pref_camera_edge_title">Sharpness</string>
    <string name="pref_camera_hue_default" translatable="false">middle</string>
    <string name="pref_camera_hue_title">Hue</string>
    <string name="pref_camera_saturation_default" translatable="false">middle</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_brightness_default" translatable="false">middle</string>
    <string name="pref_camera_brightness_title">Brightness</string>
    <string name="pref_camera_contrast_default" translatable="false">middle</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_coloreffect_default" translatable="false">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_selftimer_default" translatable="false">0</string>
    <string name="pref_camera_selftimer_title">Self timer</string>
    <string name="pref_camera_antibanding_default" translatable="false">auto</string>
    <string name="pref_camera_antibanding_title">Anti-flicker</string>
    <string name="pref_camera_eis_title">EIS</string>
    <string name="pref_camera_eis_default" translatable="false">off</string>
    <string name="pref_camera_recordaudio_default" translatable="false">on</string>
    <string name="pref_camera_recordaudio_title">Microphone</string>
    <string name="pref_camera_video_focusmode_default" translatable="false">infinity</string>
    <string name="pref_camera_video_duration_default" translatable="false">10</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
	<string name="video_hd_recording_default" translatable="false">normal</string>
	<string name="pref_camera_video_hd_recording_title">Audio mode</string>
	<string name="pref_camera_zsd_title" translatable="false">ZSD</string>
	<string name="pref_camera_zsd_default" translatable="false">off</string>
	<string name="pref_camera_continuous_number_title">Capture number</string>
	<string name="pref_camera_continuous_number_default" translatable="false">40</string>
</resources>