<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceGroup
        xmlns:camera="http://schemas.android.com/apk/res/com.android.camera"
        camera:title="@string/pref_camera_settings_category">
    <IconListPreference
            camera:key="pref_camera_flashmode_key"
            camera:defaultValue="@string/pref_camera_flashmode_default"
            camera:title="@string/pref_camera_flashmode_title"
            camera:icons="@array/camera_flashmode_icons"
            camera:largeIcons="@array/camera_flashmode_largeicons"
            camera:entries="@array/pref_camera_flashmode_entries"
            camera:entryValues="@array/pref_camera_flashmode_entryvalues" />
    <ListPreference
            camera:key="pref_camera_exposure_key"
            camera:defaultValue="@string/pref_exposure_default"
            camera:title="@string/pref_exposure_title"
            camera:singleIcon="@drawable/ic_exposure_holo_light" />
    <IconListPreference
            camera:key="pref_camera_scenemode_key"
            camera:defaultValue="@string/pref_camera_scenemode_default"
            camera:title="@string/pref_camera_scenemode_title"
            camera:singleIcon="@drawable/ic_scn_holo_light"
            camera:entries="@array/pref_camera_scenemode_entries"
            camera:entryValues="@array/pref_camera_scenemode_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_whitebalance_key"
            camera:defaultValue="@string/pref_camera_whitebalance_default"
            camera:title="@string/pref_camera_whitebalance_title"
            camera:icons="@array/whitebalance_icons"
            camera:largeIcons="@array/whitebalance_largeicons"
            camera:entries="@array/pref_camera_whitebalance_entries"
            camera:entryValues="@array/pref_camera_whitebalance_entryvalues" />
    <RecordLocationPreference
            camera:key="pref_camera_recordlocation_key"
            camera:defaultValue="@string/pref_camera_recordlocation_default"
            camera:title="@string/pref_camera_recordlocation_title"
            camera:icons="@array/camera_recordlocation_icons"
            camera:largeIcons="@array/camera_recordlocation_largeicons"
            camera:entries="@array/pref_camera_recordlocation_entries"
            camera:entryValues="@array/pref_camera_recordlocation_entryvalues" />
    <ListPreference
            camera:key="pref_camera_picturesize_key"
            camera:title="@string/pref_camera_picturesize_title"
            camera:entries="@array/pref_camera_picturesize_entries"
            camera:entryValues="@array/pref_camera_picturesize_entryvalues" />
    <ListPreference
            camera:key="pref_camera_focusmode_key"
            camera:defaultValue="@array/pref_camera_focusmode_default_array"
            camera:title="@string/pref_camera_focusmode_title"
            camera:entries="@array/pref_camera_focusmode_entries"
            camera:entryValues="@array/pref_camera_focusmode_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_id_key"
            camera:defaultValue="@string/pref_camera_id_default"
            camera:title="@string/pref_camera_id_title"
            camera:icons="@array/camera_id_icons"
            camera:entries="@array/camera_id_entries"
            camera:largeIcons="@array/camera_id_largeicons" />
    
    <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
    <IconListPreference
    		camera:key="pref_camera_normal_capture_key"
    		camera:defaultValue="@string/pref_camera_normal_capture_default"
            camera:title="@string/pref_camera_normal_capture_title"
            camera:icons="@array/pref_camera_normal_capture_icons"
            camera:entries="@array/pref_camera_normal_capture_entries"
            camera:entryValues="@array/pref_camera_normal_capture_entryvalues"
            camera:largeIcons="@array/pref_camera_normal_capture_largeicons" />
    <IconListPreference
    		camera:key="pref_camera_hdr_key"
    		camera:defaultValue="@string/pref_camera_hdr_default"
            camera:title="@string/pref_camera_hdr_title"
            camera:entries="@array/pref_camera_hdr_entries"
            camera:entryValues="@array/pref_camera_hdr_entryvalues"
            camera:largeIcons="@array/pref_camera_hdr_icons" />
            
    <!-- ISO -->
    <ListPreference
        camera:key="pref_camera_iso_key"
        camera:defaultValue="@string/pref_camera_iso_default"
        camera:title="@string/pref_camera_iso_title"
        camera:entries="@array/pref_camera_iso_entries"
        camera:entryValues="@array/pref_camera_iso_entryvalues"/>

    <!-- AE meter -->
    <ListPreference
        camera:key="pref_camera_exposuremeter_key"
        camera:defaultValue="@string/pref_camera_exposuremeter_default"
        camera:title="@string/pref_camera_exposuremeter_title"
        camera:entries="@array/pref_camera_exposuremeter_entries"
        camera:entryValues="@array/pref_camera_exposuremeter_entryvalues" />
            
    <!--  AF metering -->
    <ListPreference
        camera:key="pref_camera_focusmeter_key"
        camera:defaultValue="@string/pref_camera_focusmeter_default"
        camera:title="@string/pref_camera_focusmeter_title"
        camera:entries="@array/pref_camera_focusmeter_entries"
        camera:entryValues="@array/pref_camera_focusmeter_entryvalues" />
        
    <!-- Image adjustment -->
        <!-- Edge -->
        <ListPreference
            camera:key="pref_camera_edge_key"
            camera:defaultValue="@string/pref_camera_edge_default"
            camera:title="@string/pref_camera_edge_title"
            camera:entries="@array/pref_camera_dip_entries"
            camera:entryValues="@array/pref_camera_dip_entryvalues" />
        <!-- Hue -->
        <ListPreference
            camera:key="pref_camera_hue_key"
            camera:defaultValue="@string/pref_camera_hue_default"
            camera:title="@string/pref_camera_hue_title"
            camera:entries="@array/pref_camera_dip_entries"
            camera:entryValues="@array/pref_camera_dip_entryvalues" />
        <!-- Saturation -->
        <ListPreference
            camera:key="pref_camera_saturation_key"
            camera:defaultValue="@string/pref_camera_saturation_default"
            camera:title="@string/pref_camera_saturation_title"
            camera:entries="@array/pref_camera_dip_entries"
            camera:entryValues="@array/pref_camera_dip_entryvalues" />
        <!-- Brightness -->
        <ListPreference
            camera:key="pref_camera_brightness_key"
            camera:defaultValue="@string/pref_camera_brightness_default"
            camera:title="@string/pref_camera_brightness_title"
            camera:entries="@array/pref_camera_dip_entries"
            camera:entryValues="@array/pref_camera_dip_entryvalues" />
        <!-- Contrast -->
        <ListPreference
            camera:key="pref_camera_contrast_key"
            camera:defaultValue="@string/pref_camera_contrast_default"
            camera:title="@string/pref_camera_contrast_title"
            camera:entries="@array/pref_camera_dip_entries"
            camera:entryValues="@array/pref_camera_dip_entryvalues" />
    <!--  Effects -->
    <IconListPreference
        camera:key="pref_camera_coloreffect_key"
        camera:defaultValue="@string/pref_camera_coloreffect_default"
        camera:title="@string/pref_camera_coloreffect_title"
        camera:entries="@array/pref_camera_coloreffect_entries"
        camera:icons="@array/pref_camera_coloreffect_icons"
        camera:largeIcons="@array/pref_camera_coloreffect_icons"
        camera:entryValues="@array/pref_camera_coloreffect_entryvalues" />
        
    <!-- Self timer setting -->
    <ListPreference
        camera:key="pref_camera_self_timer_key"
        camera:defaultValue="@string/pref_camera_selftimer_default"
        camera:title="@string/pref_camera_selftimer_title"
        camera:entries="@array/pref_camera_selftimer_entries"
        camera:entryValues="@array/pref_camera_selftimer_entryvalues"/>
        
    <!-- anti-flicker -->
    <ListPreference
        camera:key="pref_camera_antibanding_key"
        camera:defaultValue="@string/pref_camera_antibanding_default"
        camera:title="@string/pref_camera_antibanding_title"
        camera:entries="@array/pref_camera_antibanding_entries"
        camera:entryValues="@array/pref_camera_antibanding_entryvalues" />

    <ListPreference
    	camera:key="pref_camera_zsd_key"
    	camera:defaultValue="@string/pref_camera_zsd_default"
    	camera:title="@string/pref_camera_zsd_title"
    	camera:entries="@array/pref_camera_zsd_entries"
    	camera:entryValues="@array/pref_camera_zsd_entryvalues" />

	<ListPreference
		camera:key="pref_camera_shot_number"
		camera:defaultValue="@string/pref_camera_continuous_number_default"
		camera:title="@string/pref_camera_continuous_number_title"
		camera:entries="@array/pref_camera_continuous_number_entries"
    	camera:entryValues="@array/pref_camera_continuous_number_entryvalues" />

</PreferenceGroup>
